audit/2026-09-27/iptables.v4
# Generated by iptables-save v1.8.13 (nf_tables) on Sun Sep 27 11:23:35 2026
*mangle
:PREROUTING ACCEPT [5403013:2460704827]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [4349193:2339630237]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -m conntrack --ctstate RELATED,ESTABLISHED -j CONNMARK --restore-mark --nfmask 0xff0000 --ctmask 0xff0000
-A OUTPUT -m conntrack --ctstate NEW -m mark ! --mark 0x0/0xff0000 -j CONNMARK --save-mark --nfmask 0xff0000 --ctmask 0xff0000
COMMIT
# Completed on Sun Sep 27 11:23:35 2026
# Generated by iptables-save v1.8.13 (nf_tables) on Sun Sep 27 11:23:35 2026
*filter
:INPUT ACCEPT [2706666:1315138422]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [4347774:2339519618]
:ts-forward - [0:0]
:ts-input - [0:0]
:vprouter-dns - [0:0]
:vprouter-forward - [0:0]
-A INPUT -j ts-input
-A FORWARD -j vprouter-forward
-A FORWARD -j ts-forward
-A OUTPUT -m comment --comment "Manage DNS traffic" -j vprouter-dns
-A ts-forward -i tailscale0 -j MARK --set-xmark 0x40000/0xff0000
-A ts-forward -m mark --mark 0x40000/0xff0000 -j ACCEPT
-A ts-forward -s 100.64.0.0/10 -o tailscale0 -j DROP
-A ts-forward -o tailscale0 -j ACCEPT
-A ts-input -s 100.109.179.104/32 -i lo -j ACCEPT
-A ts-input -i tailscale0 -j ACCEPT
-A ts-input -p udp -m udp --dport 40821 -j ACCEPT
-A ts-input -s 100.115.92.0/23 ! -i tailscale0 -j RETURN
-A ts-input -s 100.64.0.0/10 ! -i tailscale0 -j DROP
-A vprouter-dns -o tailscale0 -p udp -m udp --dport 53 -m comment --comment "Allow Tailscale DNS traffic" -j ACCEPT
-A vprouter-dns -o tailscale0 -p tcp -m tcp --dport 53 -m comment --comment "Allow Tailscale DNS traffic" -j ACCEPT
-A vprouter-dns -o wg0 -p udp -m udp --dport 53 -m comment --comment "Allow WireGuard DNS traffic" -j ACCEPT
-A vprouter-dns -o wg0 -p tcp -m tcp --dport 53 -m comment --comment "Allow WireGuard DNS traffic" -j ACCEPT
-A vprouter-dns -o eth0 -p udp -m udp --dport 53 -m comment --comment "Drop default DNS traffic" -j DROP
-A vprouter-dns -o eth0 -p tcp -m tcp --dport 53 -m comment --comment "Drop default DNS traffic" -j DROP
-A vprouter-dns -o eth0 -p tcp -m tcp --dport 853 -m comment --comment "Drop DNS over TLS traffic" -j DROP
-A vprouter-dns -j RETURN
-A vprouter-forward -i wg0 -o tailscale0 -m comment --comment "Allow return traffic from WireGuard to Tailscale" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A vprouter-forward -i tailscale0 -o wg0 -m comment --comment "Allow Tailscale traffic to WireGuard" -j ACCEPT
-A vprouter-forward -i wg0 -o tailscale0 -m comment --comment "Drop unestablished traffic from WireGuard to Tailscale" -j DROP
COMMIT
# Completed on Sun Sep 27 11:23:35 2026
# Generated by iptables-save v1.8.13 (nf_tables) on Sun Sep 27 11:23:35 2026
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [211100:16003656]
:POSTROUTING ACCEPT [88384:6284769]
:DOCKER_OUTPUT - [0:0]
:DOCKER_POSTROUTING - [0:0]
:ts-postrouting - [0:0]
-A OUTPUT -d 127.0.0.11/32 -j DOCKER_OUTPUT
-A POSTROUTING -j ts-postrouting
-A POSTROUTING -d 127.0.0.11/32 -j DOCKER_POSTROUTING
-A POSTROUTING -o wg0 -m comment --comment "Masquerade WireGuard traffic" -j MASQUERADE
-A DOCKER_OUTPUT -d 127.0.0.11/32 -p tcp -m tcp --dport 53 -j DNAT --to-destination 127.0.0.11:44747
-A DOCKER_OUTPUT -d 127.0.0.11/32 -p udp -m udp --dport 53 -j DNAT --to-destination 127.0.0.11:51835
-A DOCKER_POSTROUTING -s 127.0.0.11/32 -p tcp -m tcp --sport 44747 -j SNAT --to-source :53
-A DOCKER_POSTROUTING -s 127.0.0.11/32 -p udp -m udp --sport 51835 -j SNAT --to-source :53
-A ts-postrouting -m mark --mark 0x40000/0xff0000 -j MASQUERADE
COMMIT
# Completed on Sun Sep 27 11:23:35 2026
